[package]
name = "poker_game"
version = "0.2.0"
edition = "2021"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
tokio-tungstenite = "0.26.1"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.9.0"
futures = "0.3"
eframe = "*"
lazy_static = "*"
bcrypt = "0.15"



