[package]
name = "virtual-tour-editor"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }

# Utilities
futures = "0.3"



