[package]
name = "virtual-tour-editor"
version = "0.3.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["ws", "json", "multipart"] }
axum-extra = { version = "0.9", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "set-header"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Configuration
toml = "0.8"

# Authentication & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"

# Database
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
uuid = { version = "1", features = ["v4"] }

# Utilities
futures = "0.3"
tokio-tungstenite = "0.27.0"

# Packaging / export
zip = "0.6"
walkdir = "2"



